--- a/viewer/index.html
+++ b/viewer/index.html
@@ -49,7 +49,6 @@ line-height: 2em;
 <script src="d3.min.js"></script>
 <script>
 var fixed_fields = ["spatial_id", "votes", "valid", "invalid"];  //missing: eligible voters
-//var scv = d3.dsv(";", "text/plain");
 var meta;
 var parties = [];
 var result;
@@ -87,7 +86,7 @@ d3.json("parties.json", function(error, data)
 function load_data(id)
 {
 clear();
-d3.text("data/" + id + ".csv", function(error, data)
+d3.text("../data/output/results/" + id + ".csv", function(error, data)
 	{
 	if (!error) 
 		{
